--- a/.github/stacks/stack.yml
+++ b/.github/stacks/stack.yml
@@ -68,6 +68,9 @@ configs:
 
 github-apps:
 - slug: sider
+- slug: greenkeeper
+- slug: azure-boards
+- slug: azure-pipelines
 
 init:
 - uses: ".github/workflows/stack-init.yaml"
