--- a/.github/stacks/stack.yml
+++ b/.github/stacks/stack.yml
@@ -72,6 +72,7 @@ github-apps:
 - slug: azure-boards
 - slug: azure-pipelines
 - slug: gittodo-app
+- slug: mockend
 
 init:
 - uses: ".github/workflows/stack-init.yaml"
