--- a/.github/stacks/stack.yml
+++ b/.github/stacks/stack.yml
@@ -73,6 +73,7 @@ github-apps:
 - slug: azure-pipelines
 - slug: gittodo-app
 - slug: mockend
+- slug: semaphore
 
 init:
 - uses: ".github/workflows/stack-init.yaml"
