--- a/.github/stacks/stack.yml
+++ b/.github/stacks/stack.yml
@@ -67,6 +67,9 @@ configs:
         protected-branches: true
 
 github-apps:
+- slug: sider
+- slug: greenkeeper
+- slug: azure-boards
 - slug: azure-pipelines
 
 init:
